[package]
name = "od-msspe"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngrams = "1.0.1"
log = "0.4.22"
seq_io = "0.3.2"
env_logger = "0.11.5"
std-dev = "0.1.0"
itertools = "0.13.0"
csv = "1.3.1"
clap = { version = "4.5.23", features = ["derive", "env"] }
